--- a/CNode/Base.lproj/MainView.storyboard
+++ b/CNode/Base.lproj/MainView.storyboard
@@ -46,8 +46,10 @@
                                                         <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="hD8-6l-VPm">
                                                             <rect key="frame" x="10" y="0.0" width="355" height="32"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hGc-40-VBK">
+                                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hGc-40-VBK">
                                                                     <rect key="frame" x="0.0" y="0.0" width="40" height="32"/>
+                                                                    <color key="backgroundColor" red="0.92191040515899658" green="0.33945026993751526" blue="0.21955686807632446" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                    <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" constant="40" id="sEi-ng-fde"/>
                                                                     </constraints>
