--- a/CNode/Base.lproj/MainView.storyboard
+++ b/CNode/Base.lproj/MainView.storyboard
@@ -70,11 +70,17 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bzy-0g-kL9">
                                                             <rect key="frame" x="10" y="32" width="355" height="45.5"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xDK-kZ-n0L" userLabel="Preview">
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xDK-kZ-n0L" userLabel="Preview">
                                                                     <rect key="frame" x="0.0" y="0.0" width="50" height="45.5"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" constant="50" id="run-a4-x1H"/>
                                                                     </constraints>
+                                                                    <userDefinedRuntimeAttributes>
+                                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                                            <integer key="value" value="5"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.makesToBounds" value="YES"/>
+                                                                    </userDefinedRuntimeAttributes>
                                                                 </imageView>
                                                                 <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="22k-Tp-28h">
                                                                     <rect key="frame" x="50" y="0.0" width="26.5" height="45.5"/>
